# BioReactorDesign

./: .gitignore  README.md  noxfile.py  pyproject.toml  setup.py  sphinx-reading-durations.json
.github/workflows/: ci.yml  codecov.yml
docs/source/: conf.py  meshing.rst  quickstart.rst  troubleshoot.rst
experimental_cases/chen_brooks/: compute_conditional_mean.py  presteps.sh
experimental_cases/chen_brooks/system/: fvSchemes  fvSolution  setFieldsDict
experimental_cases/double_sparger/: run.sh  run_py.sh  writeGlobalVars.py
experimental_cases/double_sparger/0.orig/: N2.gas  O2.gas  O2.liquid  T.gas  T.liquid  U.gas  U.liquid  Ydefault.gas  Ydefault.liquid  alpha.gas  alpha.liquid  alphat.gas  alphat.liquid  epsilon.gas  epsilon.liquid  f.gas  k.gas  k.liquid  nut.gas  nut.liquid  p  p_rgh  water.gas  water.liquid
experimental_cases/double_sparger/constant/: globalVars
experimental_cases/double_sparger/system/: blockMeshDict  mesh.json  setFieldsDict  topology.json
tutorials_13/: full_geo.py
tutorials_13/STR_1200RPM/: blockMeshDict_reactor  presteps.sh  runjob
tutorials_13/STR_1200RPM/0.org/: H2O.liquid  N2.gas  O2.gas  T.gas  T.liquid  U.gas  U.liquid  alpha.gas  alpha.liquid  epsilon.gas  epsilon.liquid  formicAcid.liquid  k.gas  k.liquid
tutorials_13/STR_1200RPM/constant/: MRFProperties  fvModels  momentumTransfer  phaseProperties  physicalProperties.liquid
tutorials_13/STR_1200RPM/constant/polyMesh/: boundary  cellProc  cellZones  neighbour  owner
tutorials_13/STR_1200RPM/system/: controlDict  fvConstraints  fvSchemes  fvSolution  reactor_geom_data.py  setFieldsDict
