[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlr-bird"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10,<3.15"
license = { file = "LICENSE" }
description = "Bio Reactor Design (BiRD): a toolbox to simulate and analyze different designs of bioreactors in OpenFOAM"
keywords = ["meshing", "openfoam", "bioreactors"]
authors = [
    { name = "Malik Hassanaly" },
    { email = "malik.hassanaly@gmail.com" },
]
maintainers = [
    { name = "Malik Hassanaly" },
    { email = "malik.hassanaly@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy",
    "prettyplot>=0.0.36,<0.0.37",
    "ruamel_yaml",
    "numpy-stl>=3.2.0",
    "scipy",
    "corner",
    "jax>=0.9.0,<0.10",
    "numpyro>=0.20.0,<0.21",
]

[tool.setuptools.dynamic]
version = { attr = "bird.__version__" }

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.csv"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
]
tests = [
    "pytest",
    "pytest-cov",
]
calibration = [
    "joblib",
    "tensorflow",
    "scikit-learn",
    "tf2jax",
]
optim = [
    "optuna",
    "pandas",
]
dev = [
    "nox",
    "black",
    "isort",
    "codespell",
    "nlr-bird[docs,tests,optim,calibration]",
]


[project.urls]
Homepage = "https://github.com/NatLabRockies/BioReactorDesign"
Documentation = "https://natlabrockies.github.io/BioReactorDesign"
Repository = "https://github.com/NatLabRockies/BioReactorDesign"
Issues = "https://github.com/NatLabRockies/BioReactorDesign/issues"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
nlr-bird = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
calibration = { features = ["calibration"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
optim = { features = ["optim"], solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.12"
numpy = ">=2.4.2,<3"
ruamel_yaml = ">=0.15.80,<0.16"
scipy = ">=1.17.1,<2"
corner = ">=2.2.3,<3"
numpy-stl = ">=3.2.0,<4"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.2.3,<9"
sphinx_rtd_theme = ">=3.1.0,<4"
sphinx-autodoc-typehints = ">=3.5.2,<4"

[tool.pixi.feature.tests.dependencies]
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.0.0,<8"

[tool.pixi.feature.dev.dependencies]
nox = ">=2026.2.9,<2027"
black = ">=26.1.0,<27"
isort = ">=8.0.0,<9"
codespell = ">=2.4.1,<3"

[tool.pixi.feature.calibration.dependencies]
joblib = ">=1.5.3,<2"
scikit-learn = ">=1.8.0,<2"

[tool.pixi.feature.optim.dependencies]
optuna = ">=4.7.0,<5"
pandas = ">=3.0.1,<4"

[dependency-groups]
calibration = ["tensorflow>=2.20.0,<3"]
